; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_timer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_device = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @vt_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vt_timer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vt_device*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.vt_device*
  store %struct.vt_device* %6, %struct.vt_device** %3, align 8
  %7 = load %struct.vt_device*, %struct.vt_device** %3, align 8
  %8 = call i32 @vt_flush(%struct.vt_device* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.vt_device*, %struct.vt_device** %3, align 8
  %13 = call i32 @vt_schedule_flush(%struct.vt_device* %12, i32 0)
  br label %17

14:                                               ; preds = %1
  %15 = load %struct.vt_device*, %struct.vt_device** %3, align 8
  %16 = getelementptr inbounds %struct.vt_device, %struct.vt_device* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %14, %11
  ret void
}

declare dso_local i32 @vt_flush(%struct.vt_device*) #1

declare dso_local i32 @vt_schedule_flush(%struct.vt_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
